[tool.poetry]
name = "pyfip"
version = "0.1.0"
description = "FAIR Implementation Profile for CLARIAH"
authors = ["wilkos-dans", ""]
readme = "README.md"
packages = [{include = "pyfip", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
dynaconf = "^3.2.4"
pysolr = "^3.9.0"
setuptools = "^69.0.3"
simplejson = "^3.19.2"
emoji = "^2.10.1"
lxml = "^5.1.0"
elementpath = "^4.1.5"
pyyaml = "^6.0.1"
idutils = "^1.2.1"
saxonche = "^12.4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
